enabled  avg-temp map, some presentation logic

--- a/ncep/templates/index.html
+++ b/ncep/templates/index.html
@@ -2,6 +2,12 @@
 <html>
 <title> Plot</title>
 <body>
+
+<h3><a href="https://github.com/jason-upchurch/ncep/">https://github.com/jason-upchurch/ncep/develop/ncep</a></h3>
+<p>{{date_start}} to {{date_end}}
+<br> Compared to:
+{{date_start_compare}} to {{date_end_compare}}
+</p>
 <img src="data:image/png;base64, {{ plot_url }}">
 </body>
 </html>
